[project]
name = "tt-metal-mcp-tools"
version = "1.0.0"
description = "MCP tools for TT-Metal API analysis"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.1.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-cpp>=0.20.0"
]

[project.scripts]
tt-metal-mcp = "server:main_sync"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
packages = ["api_extractors", "db_generation", "tools"]